# NGES

./: .gitignore  BLOG_POST.md  CUSTOM_MODEL_GUIDE.md  LICENSE  NGES_v1.0_Definition.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
nges/: __init__.py  calculator.py  cli.py  history.py  reporter.py  runner.py
nges/axes/: __init__.py  axis_a.py  axis_b.py  axis_c.py
nges/judge/: __init__.py  llm_judge.py  rule_judge.py
nges/models/: __init__.py  anthropic_model.py  base.py  openai_model.py  registry.py
nges/tasks/: __init__.py  generator.py  holdout.py  loader.py  quick_loader.py  schemas.py
tasks/: a1_problem_solving.json  a2_reasoning.json  a3_memory_recall.json  a4_consistency.json  a5_goal_tracking.json  b3_adaptation.json
