[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nges"
version = "1.0.0"
description = "Nexus Growth Evaluation Standard — benchmark that measures how fast your AI is growing"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Park Se Yeon" }]
requires-python = ">=3.10"
keywords = ["ai", "benchmark", "evaluation", "llm", "growth", "nexus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "psutil>=5.9.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/parksy1625/NGES"
Documentation = "https://github.com/parksy1625/NGES/blob/main/NGES_v1.0_Definition.md"
Issues = "https://github.com/parksy1625/NGES/issues"

[project.scripts]
nges = "nges.cli:cli"

[tool.setuptools.packages.find]
include = ["nges*"]

[tool.setuptools.package-data]
nges = ["py.typed"]

[tool.setuptools.data-files]
"nges-tasks" = [
    "tasks/a1_problem_solving.json",
    "tasks/a2_reasoning.json",
    "tasks/a3_memory_recall.json",
    "tasks/a4_consistency.json",
    "tasks/a5_goal_tracking.json",
    "tasks/b3_adaptation.json",
    "config.yaml",
]
